--- a/configure.in
+++ b/configure.in
@@ -43,67 +43,35 @@ AC_SUBST(VERSION)
 
 eval AC_DEFINE_UNQUOTED(VERSION, "${VERSION}")
 
-#------------------------------------------------------------------------
-# Handle the --prefix=... option
-#------------------------------------------------------------------------
-
-if test "${prefix}" = "NONE"; then
-    prefix=/usr/local
-fi
-if test "${exec_prefix}" = "NONE"; then
-    exec_prefix=$prefix
-fi
-
 #--------------------------------------------------------------------
-# Check whether --enable-gcc or --disable-gcc was given.  Do this 
-# before AC_CYGWIN is called so the compiler can 
-# be fully tested by built-in autoconf tools.
-# This macro also calls AC_PROG_CC to set the compiler if --enable-gcc
-# was not used.
-#--------------------------------------------------------------------
-
-SC_ENABLE_GCC
-AC_PROG_INSTALL
-
-#--------------------------------------------------------------------
-# Checks to see if the make program sets the $MAKE variable.
-#--------------------------------------------------------------------
-
-AC_PROG_MAKE_SET
-
-#--------------------------------------------------------------------
-# Find ranlib
-#--------------------------------------------------------------------
-
-AC_PROG_RANLIB
-
-#--------------------------------------------------------------------
-# This macro performs additional compiler tests.
-#--------------------------------------------------------------------
-
-AC_CYGWIN
-
-#--------------------------------------------------------------------
-# Determines the correct binary file extension (.o, .obj, .exe etc.)
-#--------------------------------------------------------------------
-
-AC_OBJEXT
-AC_EXEEXT
-
-#--------------------------------------------------------------------
-# Call SC_TEA_INIT as the first SC_ macro to set up initial vars
+# Call TEA_TEA_INIT as the first TEA_ macro to set up initial vars
 # This will define a ${TEA_PLATFORM} variable == "unix" or "windows".
 #--------------------------------------------------------------------
 
-SC_TEA_INIT
+TEA_INIT
 
 #--------------------------------------------------------------------
-# Unix tclConfig.sh points SRC_DIR at the top-level directory of
-# the Tcl sources, while the Windows tclConfig.sh points SRC_DIR at
-# the win subdirectory.  Hence the different usages of SRC_DIR below.
-#
-# This must be done before calling SC_PUBLIC_TCL_HEADERS
+# Load the tclConfig.sh file
 #--------------------------------------------------------------------
+
+TEA_PATH_TCLCONFIG
+TEA_LOAD_TCLCONFIG
+
+#--------------------------------------------------------------------
+# Handle the --prefix=... option by defaulting to what Tcl gave.
+# Must be called after TEA_LOAD_TCLCONFIG and before $prefix is used.
+#--------------------------------------------------------------------
+
+TEA_PREFIX
+
+#------------------------------------------------------------------------
+# Standard compiler checks.
+# This sets up CC by using the CC env var, or looks for gcc otherwise.
+# This also calls AC_PROG_CC, AC_PROG_INSTALL and a few others to create
+# the basic setup necessary to compile executables.
+#------------------------------------------------------------------------
+
+TEA_SETUP_COMPILER
 
 #--------------------------------------------------------------------
 # Includes for this package
@@ -127,24 +95,17 @@ AC_SUBST(ITK_UNIX_DIR_NATIVE)
 AC_SUBST(ITK_INCLUDES)
 
 #--------------------------------------------------------------------
-# Load the tclConfig.sh file
-#--------------------------------------------------------------------
-
-SC_PATH_TCLCONFIG
-SC_LOAD_TCLCONFIG
-
-#--------------------------------------------------------------------
 # Load the tkConfig.sh file
 #--------------------------------------------------------------------
 
-SC_PATH_TKCONFIG
-SC_LOAD_TKCONFIG
+TEA_PATH_TKCONFIG
+TEA_LOAD_TKCONFIG
 
-SC_PATH_CONFIG(itcl)
-SC_LOAD_CONFIG(itcl)
+TEA_PATH_CONFIG(itcl)
+TEA_LOAD_CONFIG(itcl)
 
 AC_ARG_WITH(itcl, [  --with-itclinclude=DIR          use Itcl headers from DIR],
-        ITCL_LIB_DIR=$withval, ITCL_LIB_DIR=`cd ${srcdir}/../itcl; pwd`)
+        ITCL_LIB_DIR=$withval, ITCL_LIB_DIR=${itcl_SRC_DIR})
 
 if test ! -r "${ITCL_LIB_DIR}/generic/itclInt.h" ; then
     AC_MSG_ERROR([Cannot find Itcl private header files.  Use --with-itclinclude to specify the directory containing the Itcl private headers on your system.])
@@ -159,16 +120,16 @@ AC_SUBST(ITCL_INCLUDES)
 # hard to only rely on the Tcl public header files.  Internal headers
 # contain private data structures and are subject to change without
 # notice.
-# This must be done AFTER calling SC_PATH_TCLCONFIG/SC_LOAD_TCLCONFIG
+# This must be done AFTER calling TEA_PATH_TCLCONFIG/TEA_LOAD_TCLCONFIG
 # so that we can extract TCL_SRC_DIR from the config file (in the case
 # of private headers
 #--------------------------------------------------------------------
 
-#SC_PUBLIC_TCL_HEADERS
-SC_PRIVATE_TCL_HEADERS
+#TEA_PUBLIC_TCL_HEADERS
+TEA_PRIVATE_TCL_HEADERS
 
-#SC_PUBLIC_TK_HEADERS
-SC_PRIVATE_TK_HEADERS
+#TEA_PUBLIC_TK_HEADERS
+TEA_PRIVATE_TK_HEADERS
 
 #--------------------------------------------------------------------
 # __CHANGE__
@@ -210,14 +171,14 @@ AC_SUBST(PLATFORM_DIR)
 # So far only Tcl responds to this one.
 #--------------------------------------------------------------------
 
-SC_ENABLE_THREADS
+TEA_ENABLE_THREADS
 
 #--------------------------------------------------------------------
 # The statement below defines a collection of symbols related to
 # building as a shared library instead of a static library.
 #--------------------------------------------------------------------
 
-SC_ENABLE_SHARED
+TEA_ENABLE_SHARED
 
 #--------------------------------------------------------------------
 # This macro figures out what flags to use with the compiler/linker
@@ -225,14 +186,14 @@ SC_ENABLE_SHARED
 # is all taken from the tclConfig.sh file.
 #--------------------------------------------------------------------
 
-SC_CONFIG_CFLAGS
+TEA_CONFIG_CFLAGS
 
 #--------------------------------------------------------------------
 # Set the default compiler switches based on the --enable-symbols 
 # option.
 #--------------------------------------------------------------------
 
-SC_ENABLE_SYMBOLS
+TEA_ENABLE_SYMBOLS
 
 if test "${SHARED_BUILD}" = "1" ; then
     CFLAGS='${CFLAGS_DEFAULT} ${CFLAGS_WARNING} ${SHLIB_CFLAGS}'
@@ -255,11 +216,11 @@ fi
 
 #--------------------------------------------------------------------
 # This macro generates a line to use when building a library.  It
-# depends on values set by the SC_ENABLE_SHARED, SC_ENABLE_SYMBOLS,
-# and SC_LOAD_TCLCONFIG macros above.
+# depends on values set by the TEA_ENABLE_SHARED, TEA_ENABLE_SYMBOLS,
+# and TEA_LOAD_TCLCONFIG macros above.
 #--------------------------------------------------------------------
 
-SC_MAKE_LIB
+TEA_MAKE_LIB
 
 #--------------------------------------------------------------------
 # __CHANGE__
@@ -290,13 +251,13 @@ AC_SUBST(itk_LIB_FILE)
 # versions have bugs in the pkg_mkIndex routine.
 #--------------------------------------------------------------------
 
-SC_PROG_TCLSH
+TEA_PROG_TCLSH
 
 #--------------------------------------------------------------------
 # A wish shell is needed to run the test suite.
 #--------------------------------------------------------------------
 
-SC_PROG_WISH
+TEA_PROG_WISH
 
 #--------------------------------------------------------------------
 # Finally, substitute all of the various values into the Makefile.
