--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -1,67 +1,69 @@
-######################################################################
-# Visual C++ 5.0+ makefile for [Incr Tcl]
+#------------------------------------------------------------------------------
+# Visual C++ 5.0+ makefile for [Incr Tk]
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.12 2001/06/22 04:39:46 davygrvy Exp $
-######################################################################
-# All needed information is derived from running vcvars32.bat
-#
-# NOTE: Be sure to modify the "config.vc" file in the toplevel directory
-#   before running this makefile.
-######################################################################
-#  Do not modify this file!  modify config.vc to effect the build.
-######################################################################
+# RCS: $Id: makefile.vc,v 1.13 2002/04/20 08:09:08 davygrvy Exp $
+#------------------------------------------------------------------------------
+#  Do not modify this file!
+#------------------------------------------------------------------------------
 
+!if !exist("makefile.vc")
+MSG = ^
+You must run this makefile only from the directory it is in.^
+Please `cd` to its location first.
+!error $(MSG) 
+!endif
+
+PROJECT	= itk
 !include "..\..\rules.vc"
-!include "..\..\config.vc"
 !include "..\..\pkg.vc"
+
+
+!if $(TCLINSTALL)
+!message *** Warning: [Incr Tk] requires the source distribution of Tcl to build from,
+!message ***    at this time, sorry.  Please set the TCLDIR macro to point to the
+!message ***    sources.
+!endif
 
 BINROOT		= .
 ROOT		= ..
+STUBPREFIX	= $(PROJECT)stub
+
+PKGINDEX	= "$(TMP_DIR)\pkgIndex.tcl"
+
 ITCLDIR		= ..\..\itcl
-ITKNAMEPREFIX  = itk
-STUBPREFIX = $(ITKNAMEPREFIX)stub
+ITCLLIBNAME	= $(PROJECT)$(ITCL_VERSION)$(SUFX).$(EXT)
+ITCLLIB		= "$(OUT_DIR)\$(ITCLLIBNAME)"
+ITKIMPLIB	= "$(OUT_DIR)\$(PROJECT)$(ITCL_VERSION)$(SUFX).lib"
+ITKSTUBLIBNAME	= $(STUBPREFIX)$(ITCL_VERSION).lib
+ITKSTUBLIB	= "$(OUT_DIR)\$(ITCLSTUBLIBNAME)"
 
-!if $(DEBUG)
-TMPNAME		= Debug
-DBGX		= d
+BIN_INSTALL_DIR		= $(INSTALLDIR)\bin
+DOC_INSTALL_DIR		= $(INSTALLDIR)\doc
+LIB_INSTALL_DIR		= $(INSTALLDIR)\lib
+SCRIPT_INSTALL_DIR	= $(INSTALLDIR)\lib\itk$(ITK_DOTVERSION)
+INCLUDE_INSTALL_DIR	= $(INSTALLDIR)\include
+
+ITKLIBNAME	= $(PROJECT)$(ITCL_VERSION)$(SUFX).$(EXT)
+ITKLIB		= "$(OUT_DIR)\$(ITKLIBNAME)"
+
+!if $(TCLINSTALL)
+TCLSTUBLIB	= "$(TCLDIR)\lib\tclstub$(TCL_VERSION).lib"
+TKSTUBLIB	= "$(TCLDIR)\lib\tkstub$(TCL_VERSION).lib"
+TCLIMPLIB	= "$(TCLDIR)\lib\tcl$(TCL_VERSION)$(DBGX).lib"
+TKIMPLIB	= "$(TCLDIR)\lib\tk$(TCL_VERSION)$(DBGX).lib"
+TCLSH		= "$(TCLDIR)\bin\tclsh$(TCL_VERSION)$(DBGX).exe"
+WISH		= "$(TCLDIR)\bin\wish$(TCL_VERSION)$(DBGX).exe"
 !else
-TMPNAME		= Release
-DBGX		=
-!endif
-
-TMP_DIR		= $(BINROOT)\$(TMPNAME)
-
-!ifndef OUT_DIR
-OUT_DIR		= $(TMP_DIR)
-!endif
-
-!if $(STATIC_BUILD)
-ITKOUTNAME	= $(ITKNAMEPREFIX)$(ITK_VERSION)s$(DBGX)
-ITKTARGET	= "$(OUT_DIR)\$(ITKOUTNAME).lib"
-!else
-ITKOUTNAME	= $(ITKNAMEPREFIX)$(ITK_VERSION)$(DBGX)
-ITKIMPLIB	= "$(OUT_DIR)\$(ITKOUTNAME).lib"
-ITKTARGET	= "$(OUT_DIR)\$(ITKOUTNAME).dll"
-!endif
-
-!if $(ISTCLINSTALL)
-TCLSTUBLIB	= "$(TCLROOT)\lib\tclstub$(TCL_VERSION).lib"
-TKSTUBLIB	= "$(TCLROOT)\lib\tkstub$(TCL_VERSION).lib"
-TCLIMPLIB	= "$(TCLROOT)\lib\tcl$(TCL_VERSION)$(DBGX).lib"
-TKIMPLIB	= "$(TCLROOT)\lib\tk$(TCL_VERSION)$(DBGX).lib"
-TCLSH		= "$(TCLROOT)\bin\tclsh$(TCL_VERSION)$(DBGX).exe"
-WISH		= "$(TCLROOT)\bin\wish$(TCL_VERSION)$(DBGX).exe"
-!else
-TCLSTUBLIB	= "$(TCLROOT)\win\Release\tclstub$(TCL_VERSION).lib"
-TKSTUBLIB	= "$(TKROOT)\win\Release\tkstub$(TCL_VERSION).lib"
-TCLIMPLIB	= "$(TCLROOT)\win\$(OUT_DIR)\tcl$(TCL_VERSION)$(DBGX).lib"
-TKIMPLIB	= "$(TKROOT)\win\$(OUT_DIR)\tk$(TCL_VERSION)$(DBGX).lib"
-TCLSH		= "$(TCLROOT)\win\$(OUT_DIR)\tclsh$(TCL_VERSION)$(DBGX).exe"
-WISH		= "$(TCLROOT)\win\$(OUT_DIR)\wish$(TCL_VERSION)$(DBGX).exe"
+TCLSTUBLIB	= "$(TCLDIR)\win\Release\tclstub$(TCL_VERSION).lib"
+TKSTUBLIB	= "$(TKDIR)\win\Release\tkstub$(TCL_VERSION).lib"
+TCLIMPLIB	= "$(TCLDIR)\win\$(OUT_DIR)\tcl$(TCL_VERSION)$(DBGX).lib"
+TKIMPLIB	= "$(TKDIR)\win\$(OUT_DIR)\tk$(TCL_VERSION)$(DBGX).lib"
+TCLSH		= "$(TCLDIR)\win\$(OUT_DIR)\tclsh$(TCL_VERSION)$(DBGX).exe"
+WISH		= "$(TCLDIR)\win\$(OUT_DIR)\wish$(TCL_VERSION)$(DBGX).exe"
 !endif
 
 ITCLSTUBLIBNAME	= itclstub$(ITCL_VERSION).lib
@@ -81,9 +83,9 @@ ITKOBJS = \
 	$(TMP_DIR)\itk_cmds.obj \
 	$(TMP_DIR)\itk_option.obj \
 	$(TMP_DIR)\itk_util.obj \
-!if $(STATIC_BUILD) == 0
+!if !$(STATIC_BUILD)
 	$(TMP_DIR)\dllEntryPoint.obj \
-	$(TMP_DIR)\dllResource.obj \
+	$(TMP_DIR)\itk.res \
 !endif
 	$(TMP_DIR)\itkStubInit.obj
 
@@ -94,102 +96,110 @@ WINDIR		= $(ROOT)\win
 GENERICDIR	= $(ROOT)\generic
 RCDIR		= $(ROOT)\win\rc
 
-######################################################################
+#---------------------------------------------------------------------
 # Link flags
-######################################################################
+#---------------------------------------------------------------------
 
 !if $(DEBUG)
-ldebug = -debug:full -debugtype:cv -pdb:none
+ldebug	= -debug:full -debugtype:cv
 !else
-ldebug = -release -opt:ref
+ldebug	= -release -opt:ref -opt:icf,3
 !endif
 
 # declarations common to all linker options
-lcommon = -nologo -link50compat -machine:$(MACHINE)
+lflags	= -nologo -machine:$(MACHINE) $(ldebug)
 
-ITK_LFLAGS = $(lcommon) -subsystem:windows -dll
+!if $(PROFILE)
+lflags	= $(lflags) -profile
+!endif
 
-!if $(USE_TCL_STUBS)
+!if $(ALIGN98_HACK) && !$(STATIC_BUILD)
+# align sections for PE size savings.
+lflags	= $(lflags) -opt:nowin98
+!else if !$(ALIGN98_HACK) && $(STATIC_BUILD)
+# align sections for speed in loading by choosing the virtual page size.
+lflags	= $(lflags) -align:4096
+!endif
+
+!if $(LOIMPACT)
+lflags	= $(lflags) -ws:aggressive
+!endif
+
+ITK_LFLAGS = $(lflags) -subsystem:windows -dll
 ITK_LLIBS	= $(TCLSTUBLIB) $(TKSTUBLIB) $(ITCLSTUBLIB)
-!else
-ITK_LLIBS	= $(TCLIMPLIB) $(TKIMPLIB) $(ITCLIMPLIB)
-!endif
 
-######################################################################
+#---------------------------------------------------------------------
 # Compile flags
-######################################################################
+#---------------------------------------------------------------------
 
-!if $(DEBUG) == 0
-!if "$(MACHINE)" == "ALPHA"
-# MSVC on Alpha doesn't understand -Ot
-cdebug = -O2i
+!if $(DEBUG)
+!if "$(MACHINE)" == "IA64"
+cdebug = -Od -Zi
 !else
-cdebug = -Ox
+cdebug = -Z7 -Od -WX
 !endif
 !else
-!if $(MSDEV_VER) < 6
-cdebug = -Zi -Od -WX
-!else
-cdebug = -ZI -Od -WX
-!endif
-!endif
-
-!if $(STATIC_BUILD)
-cdll	=
-!else
-cdll	= -GD
+# This cranks the optimization level up to max.
+cdebug = -O2
 !endif
 
 # declarations common to all compiler options
-ccommon = -nologo -c -W3 -YX -Fp$(TMP_DIR)\ 
+cflags = -nologo -c -W3 -YX -Fp$(TMP_DIR)^\
 
-!if $(STATIC_BUILD) && $(NOMSVCRT)
-crt	= -MT$(DBGX)
-!else
-crt	= -MD$(DBGX)
+!if $(PENT_0F_ERRATA)
+cflags = $(cflags) -QI0f
 !endif
 
-!if $(ISTCLINSTALL)
-TCL_INCLUDES	= -I"$(TCLROOT)\include"
+!if $(ITAN_B_ERRATA)
+cflags = $(cflags) -QIA64_Bx
+!endif
+
+!if $(MSVCRT)
+crt = -MD$(DBGX)
+!else
+crt = -MT$(DBGX)
+!endif
+
+!if $(TCLINSTALL)
+TCL_INCLUDES	= -I"$(TCLDIR)\include"
 TK_INCLUDES	= 
 !else
-TCL_INCLUDES	= -I"$(TCLROOT)\generic"
-TK_INCLUDES	= -I"$(TKROOT)\generic" -I"$(TKROOT)\xlib"
+TCL_INCLUDES	= -I"$(TCLDIR)\generic"
+TK_INCLUDES	= -I"$(TKDIR)\generic" -I"$(TKDIR)\xlib"
 !endif
 
 ITK_INCLUDES	= -I$(WINDIR) -I$(GENERICDIR)
 ITCL_INCLUDES	= -I"$(ITCLDIR)\generic"
 ITK_DEFINES	= -DBUILD_itk -DTCL_THREADS=1
-ITK_EXE_CFLAGS	= $(ccommon) $(cdebug) $(crt) $(cdll) $(ITCL_INCLUDES) $(ITK_INCLUDES) \
+ITK_EXE_CFLAGS	= $(cdebug) $(cflags) $(crt) $(ITCL_INCLUDES) $(ITK_INCLUDES) \
 		$(TCL_INCLUDES) $(TK_INCLUDES) $(ITK_DEFINES)
 
-!if $(USE_TCL_STUBS)
-ITK_CFLAGS	= $(ITK_EXE_CFLAGS) -DUSE_TCL_STUBS -DUSE_TK_STUBS -DUSE_ITCL_STUBS
+### By convention, static build do not use Stubs.  This is just a practice,
+### not a technical limitation.
+!if $(STATIC_BUILD)
+ITK_CFLAGS	= $(ITK_EXE_CFLAGS) -DSTATIC_BUILD
 !else
-ITK_CFLAGS	= $(ITK_EXE_CFLAGS)
+ITK_CFLAGS	= $(ITK_EXE_CFLAGS) -DUSE_TCL_STUBS -DUSE_TK_STUBS -DUSE_ITCL_STUBS
 !endif
 
-######################################################################
+#---------------------------------------------------------------------
 # Project specific targets
-######################################################################
+#---------------------------------------------------------------------
 
-all :     setup $(ITKTARGET) $(ITKSTUBLIB)
-release : setup $(ITKTARGET) $(ITKSTUBLIB)
+all :     setup $(ITKLIB) $(ITKSTUBLIB)
+release : setup $(ITKLIB) $(ITKSTUBLIB)
 
-test:	setup $(ITKDLL) $(ITKSTUBLIB) $(ITKWISH)
+test:	setup $(ITKLIB) $(ITKSTUBLIB) $(ITKWISH)
 	-@copy $(TCLDLL) $(TMPDIR)
 	-@copy $(TKDLL) $(TMPDIR)
 	-@copy $(ITCLDLL) $(TMPDIR)
 #	$(ITKWISH)
 
 setup :
-	@$(vcvars) > nul
-	@if not exist $(TMP_DIR)\nul mkdir $(TMP_DIR) &\
-		echo Created directory '$(TMP_DIR)'
-	@if not exist $(OUT_DIR)\nul mkdir $(OUT_DIR) &\
-		echo Created directory '$(OUT_DIR)'
+	@if not exist $(TMP_DIR)\nul mkdir $(TMP_DIR)
+	@if not exist $(OUT_DIR)\nul mkdir $(OUT_DIR)
 
-$(ITKTARGET): $(ITKOBJS)
+$(ITKLIB): $(ITKOBJS)
 !if $(STATIC_BUILD)
 	$(lib32) -nologo -machine:$(MACHINE) -out:$@ @<<
 !else
@@ -199,7 +209,7 @@ $(ITKTARGET): $(ITKOBJS)
 <<
 
 
-!if $(DEBUG) == 0
+!if !$(DEBUG)
 $(ITKSTUBLIB) : $(ITKSTUBOBJS)
 	$(lib32) -nologo -out:$@ $(ITKSTUBOBJS)
 !else
@@ -221,11 +231,11 @@ install: all
 		"$(SCRIPT_INSTALL_DIR)\pkgIndex.tcl"
 
 
-######################################################################
+#---------------------------------------------------------------------
 # Regenerate the stubs files.
-######################################################################
+#---------------------------------------------------------------------
 
-!if $(ISTCLINSTALL) == 0
+!if !$(TCLINSTALL)
 # Only from the sources of Tcl does genStubs.tcl exist.
 genstubs:
     $(TCLSH) $(TCLROOT)\tools\genStubs.tcl $(GENERICDIR) \
@@ -235,9 +245,9 @@ genstubs:
     @echo ERROR: Can't rebuild stubs tables without the Tcl source distribution
 !endif
 
-######################################################################
+#---------------------------------------------------------------------
 # Special case object file targets
-######################################################################
+#---------------------------------------------------------------------
 
 # The following object is part of the stub library and should not
 # be built as DLL objects but none of the symbols should be exported
@@ -245,37 +255,26 @@ genstubs:
 $(TMP_DIR)\itkStubLib.obj : $(GENERICDIR)\itkStubLib.c
     $(cc32) -DSTATIC_BUILD $(ITK_EXE_CFLAGS) -Zl -Fo$@ $?
 
-$(TMP_DIR)\dllResource.obj : $(TMP_DIR)\itk.res
-	$(cvtres32) -nologo -machine:$(MACHINE) -out:$@ $?
+#---------------------------------------------------------------------
+# Inference rules.
+#---------------------------------------------------------------------
 
-######################################################################
-# Inference rules.  Use batch-mode when supported.
-######################################################################
-
-!if $(_NMAKE_VER) < 162
-{$(WINDIR)}.c{$(TMP_DIR)}.obj :
-!else
 {$(WINDIR)}.c{$(TMP_DIR)}.obj ::
-!endif
-	$(cc32) -DDLL_BUILD $(ITK_CFLAGS) -Fo$(TMP_DIR)\ @<<
+	$(cc32) $(ITK_CFLAGS) -Fo$(TMP_DIR)\ @<<
 $<
 <<
 
-!if $(_NMAKE_VER) < 162
-{$(GENERICDIR)}.c{$(TMP_DIR)}.obj :
-!else
 {$(GENERICDIR)}.c{$(TMP_DIR)}.obj ::
-!endif
-	$(cc32) -DDLL_BUILD $(ITK_CFLAGS) -Fo$(TMP_DIR)\ @<<
+	$(cc32) $(ITK_CFLAGS) -Fo$(TMP_DIR)\ @<<
 $<
 <<
 
 {$(RCDIR)}.rc{$(TMP_DIR)}.res :
 	$(rc32) -fo $@ -DDEBUG=$(DEBUG) $(ITK_INCLUDES) $(TCL_INCLUDES) $(ITCL_INCLUDES) $(ITK_DEFINES) $<
 
-######################################################################
+#---------------------------------------------------------------------
 # Clean up
-######################################################################
+#---------------------------------------------------------------------
 
 tidy :
 	-del $(TMP_DIR)\*.pch
