--- a/tclGL/configure.in
+++ b/tclGL/configure.in
@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tcl installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.1.2.1 2007/11/02 17:24:23 wiede Exp $
+# RCS: @(#) $Id: configure.in,v 1.1.2.2 2007/11/10 18:39:34 wiede Exp $
 
 #-----------------------------------------------------------------------
 # tclGL configure.in for Tcl Extensions.  The only places you should
@@ -71,7 +71,7 @@ TEA_SETUP_COMPILER
 # and PKG_TCL_SOURCES.
 #-----------------------------------------------------------------------
 
-TEA_ADD_SOURCES([tclGLBase.c tclGLCmd.c tclGLStubInit.c tclGLUtil.c])
+TEA_ADD_SOURCES([tclGLBase.c tclGLCmd.c tclGLextCmd.c tclGLStubInit.c tclGLUtil.c])
 TEA_ADD_HEADERS([])
 TEA_ADD_INCLUDES([])
 TEA_ADD_LIBS([-L/usr/X11/lib -lGLU -lGL -lX11 -lXrandr -lm])
